--- a/web/css/all.css
+++ b/web/css/all.css
@@ -1,4 +1,9 @@
-
+@media(min-width: 768px) {
+  .field-label-responsive {
+    padding-top: .5rem;
+    text-align: right;
+  }
+}
 
 #table {
   width: 100%;
